--- a/notebooks/portfolio_optimization.ipynb
+++ b/notebooks/portfolio_optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,25 +15,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tickers = ['BTC','BNB','SOL','LTC','UNI','VET']\n",
+    "tickers = ['BTC','SOL','LTC','UNI','VET']\n",
     "end_date = datetime.today()\n",
     "start_date = end_date - timedelta(days = 5*365)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n",
       "[*********************100%%**********************]  1 of 1 completed\n",
       "[*********************100%%**********************]  1 of 1 completed\n",
       "[*********************100%%**********************]  1 of 1 completed\n",
@@ -47,6 +46,47 @@
     "for ticker in tickers:\n",
     "    data = yf.download(ticker, start = start_date,end = end_date)\n",
     "    adj_close_df[ticker] = data['Adj Close']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_returns = np.log(adj_close_df/adj_close_df.shift(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#log_returns = log_returns.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          BTC       SOL       LTC          UNI       VET\n",
+      "BTC  0.001392  0.002926  0.001256     0.000968 -0.001010\n",
+      "SOL  0.002926  0.874495  0.027054     0.010865  0.079842\n",
+      "LTC  0.001256  0.027054  0.051275    -1.004799  0.029206\n",
+      "UNI  0.000968  0.010865 -1.004799  1101.202903  1.420500\n",
+      "VET -0.001010  0.079842  0.029206     1.420500  0.355835\n"
+     ]
+    }
+   ],
+   "source": [
+    "cov_matrix = log_returns.cov() * 252\n",
+    "print(cov_matrix)"
    ]
   },
   {
