--- a/notebooks/portfolio_optimization.ipynb
+++ b/notebooks/portfolio_optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -44,14 +44,18 @@
    ],
    "source": [
     "adj_close_df = pd.DataFrame()\n",
+    "\n",
     "for ticker in tickers:\n",
-    "    data = yf.download(ticker, start = start_date,end = end_date)\n",
-    "    adj_close_df[ticker] = data['Adj Close']"
+    "    try:\n",
+    "        data = yf.download(ticker, start=start_date, end=end_date)\n",
+    "        adj_close_df[ticker] = data['Adj Close']\n",
+    "    except Exception as e:\n",
+    "        print(f\"Failed to download data for {ticker}: {str(e)}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -77,11 +81,11 @@
      "output_type": "stream",
      "text": [
       "           BTC       SOL      LINK       LTC          UNI       VET\n",
-      "BTC   0.001392  0.002926 -0.000211  0.001256     0.000962 -0.001010\n",
+      "BTC   0.001392  0.002926 -0.000211  0.001256     0.000968 -0.001010\n",
       "SOL   0.002926  0.874495 -0.016111  0.027054     0.010865  0.079842\n",
       "LINK -0.000211 -0.016111  0.463099  0.008732     0.114427  0.031158\n",
       "LTC   0.001256  0.027054  0.008732  0.051275    -1.004799  0.029206\n",
-      "UNI   0.000962  0.010865  0.114427 -1.004799  1101.202903  1.420500\n",
+      "UNI   0.000968  0.010865  0.114427 -1.004799  1101.202903  1.420500\n",
       "VET  -0.001010  0.079842  0.031158  0.029206     1.420500  0.355835\n"
      ]
     }
@@ -93,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
