try automate backtests

--- a/notebooks/fetch_data/yahoo_finance.ipynb
+++ b/notebooks/fetch_data/yahoo_finance.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Microsoft Corporation'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "\n",
+    "tickers = yf.Tickers('msft aapl goog')\n",
+    "\n",
+    "# access each ticker using (example)\n",
+    "tickers.tickers['MSFT'].info[\"longName\"]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
