add more backtesting strategies

--- a/notebooks/backtest results/save_backtest_results_to_db.ipynb
+++ b/notebooks/backtest results/save_backtest_results_to_db.ipynb
@@ -2,18 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir(\"../../../\")\n",
-    "from src.backtesting.run_backtest import prepare_and_run_backtest, prepare_and_run_many_backtests\n"
+    "# os.chdir(\"../../../\")\n",
+    "from backtest_service.backtesting.run_backtest import prepare_and_run_backtest, prepare_and_run_many_backtests\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bollinger_params = {\n",
+    "  'period': 20,\n",
+    "  'devfactor': 2\n",
+    "}\n",
+    "\n",
+    "crossover_indicator_params = {\n",
+    "    \"pfast\": 11,\n",
+    "    \"pslow\": 230\n",
+    "}\n",
+    "\n",
+    "rsi_params = {\n",
+    "  'maperiod': 15,\n",
+    "}\n",
+    "\n",
+    "macd_params = {\n",
+    "  'fastperiod': 10,\n",
+    "  'slowperiod': 26,\n",
+    "  'signalperiod': 9}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -21,6 +47,13 @@
      "output_type": "stream",
      "text": [
       "[*********************100%%**********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
@@ -33,48 +66,47 @@
     {
      "data": {
       "text/plain": [
-       "{'sharpe_ratio': -56.170539814864995,\n",
-       " 'return': 0.0016039282062443186,\n",
-       " 'max_drawdown': 0.027967838637854507,\n",
-       " 'win_trade': 6,\n",
-       " 'loss_trade': 9,\n",
-       " 'total_trade': 16,\n",
+       "{'sharpe_ratio': -79.75169900102752,\n",
+       " 'return': 0.0007839905793228928,\n",
+       " 'max_drawdown': 0.04559863362794017,\n",
+       " 'win_trade': 34,\n",
+       " 'loss_trade': 12,\n",
+       " 'total_trade': 46,\n",
        " 'start_portfolio': 100000,\n",
-       " 'final_portfolio': 100160.52151870728}"
+       " 'final_portfolio': 100078.42979802651}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "crossover_indicator_params = {\n",
-    "    \"pfast\": 11,\n",
-    "    \"pslow\": 230\n",
-    "}\n",
     "\n",
-    "result=prepare_and_run_backtest(strategy_params=crossover_indicator_params)\n",
+    "result=prepare_and_run_backtest(\n",
+    "  asset=\"GOOGL\",\n",
+    "  interval=\"1d\",\n",
+    "  strategy_name=\"BollingerBands\",\n",
+    "  start_date=\"2007-06-26\",\n",
+    "  end_date=\"2024-06-28\",\n",
+    "  commission=0.001,\n",
+    "  cash=100000,\n",
+    "  # strategy_params=rsi_params\n",
+    ")\n",
     "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n",
       "[*********************100%%**********************]  1 of 1 completed\n",
       "[*********************100%%**********************]  1 of 1 completed\n",
       "[*********************100%%**********************]  1 of 1 completed\n"
