calculate total trades explicitly

--- a/notebooks/backtest results/save_backtest_results_to_db.ipynb
+++ b/notebooks/backtest results/save_backtest_results_to_db.ipynb
@@ -39,16 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -60,7 +53,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "[*********************100%%**********************]  1 of 1 completed\n"
      ]
     },
     {
@@ -76,7 +69,7 @@
        " 'final_portfolio': 100078.42979802651}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +85,7 @@
     "  end_date=\"2024-06-28\",\n",
     "  commission=0.001,\n",
     "  cash=100000,\n",
-    "  # strategy_params=rsi_params\n",
+    "  strategy_params=bollinger_params\n",
     ")\n",
     "result"
    ]
